--- a/templates/apuri.html
+++ b/templates/apuri.html
@@ -1,1 +1,1 @@
-<a href="/static/file_read.exe" download="file_read.exe">file_read.exeのダウンロードです!!!</a>
+<a href="/static/file_read.zip" download="file_read.exe">file_read.exeのダウンロードです!!!</a>
